rootskel (1.68) UNRELEASED; urgency=low

  [ Martin Michlmayr ]
  * Load required udebs for the NSLU2 automatically (partman-auto,
    partman-ext3 and usb-storage-modules).   (Closes: #498795)
  * Load required udebs for the Cobalt automatically (partman-auto,
    partman-ext2r0 and partman-ext3).

 -- Martin Michlmayr <tbm@cyrius.com>  Sun, 14 Sep 2008 09:59:06 +0300

rootskel (1.67) unstable; urgency=low

  [ Martin Michlmayr ]
  * Update the initrd init to use start-udev/reopen-console.

 -- Martin Michlmayr <tbm@cyrius.com>  Thu, 04 Sep 2008 10:19:48 +0300

rootskel (1.66) unstable; urgency=low

  [ Jérémy Bobbio ]
  * Start udev before running init.
    Depends: udev-udeb (>= 0.125-6)
  * Rework the switch from /dev/console to the real console device
    (e.g. /dev/tty0).  (Closes: #484366)
    Breaks: cdebconf-gtk-udeb (<< 0.134)

 -- Otavio Salvador <otavio@debian.org>  Thu, 28 Aug 2008 10:16:15 -0300

rootskel (1.65) unstable; urgency=low

  [ Colin Watson ]
  * Add debian-installer/exit/poweroff to run poweroff rather than reboot or
    halt at the end of the installation. Requested by Crispin Flowerday.

  [ Martin Michlmayr ]
  * Only set DEBCONF_DROP_TRANSLATIONS=1 if it is not set yet.  This
    allows others (e.g. oldsys-preseed) to set the variable to 0 before
    S70menu is run.

 -- Martin Michlmayr <tbm@cyrius.com>  Sat, 23 Aug 2008 21:38:50 +0300

rootskel (1.64) unstable; urgency=low

  [ Samuel Thibault ]
  * Add basic support for speakup (voice synthesis for accessibility).

  [ Martin Michlmayr ]
  * Add a startup script to change the LED on the HP mv2120 to indicate
    the status of d-i.

  [ Frams Pop ]
  * Stop the udev daemon before unmounting file systems when D-I is shut down.
    Not doing so results in errors with udev 0.124. Closes: #490924.

 -- Frans Pop <fjp@debian.org>  Wed, 16 Jul 2008 13:51:29 +0200

rootskel (1.63) unstable; urgency=low

  [ Joey Hess ]
  * Rename toplevel /floppy mountpoint to /media, as used by the newly